--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -31,3 +31,16 @@
     transform: rotate(360deg);
   }
 }
+
+.board-row {
+  margin: 0 auto;
+  width: 300px;
+  height: 100px;
+  display: flex;
+}
+
+.board-cell {
+  display: inline-block;
+  border: 1px solid black;
+  flex: 1;
+}
