--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -3,6 +3,11 @@
     flex-direction: column;
     max-width: 480px;
     width: 90vw;
+    display: flex;
+}
+
+.App > * {
+    flex: 1;
 }
 
 @keyframes App-logo-spin {
@@ -36,13 +41,66 @@
 }
 
 h1 {
-    color: rgb(66,66,66);
-    margin: 2vh 0 4vh 0;
+    color: rgb(66, 66, 66);
+    margin: 2vmin 0 4vmin 0;
     font-size: 2.5rem;
+    white-space: nowrap;
+}
+
+.board-actions {
+    display: flex;
+}
+
+.board-action-button {
+    margin: 8px;
+    padding: 6px 8px;
+    display: inline-flex;
+    color: rgba(62, 62, 62, 0.87);
+    font-size: 0.9rem;
+    font-weight: 600;
+    transition: background-color .25s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+    line-height: 1.75;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.board-action-button:hover {
+    background-color: rgba(0, 0, 0, 0.08);
+}
+
+.score-panel {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    margin-bottom: 4vmin;
+}
+
+.score-panel > div {
+    flex: 1;
+}
+
+.score-panel-figure {
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    vertical-align: top;
+}
+
+.score-panel .score-label {
+    font-size: 1.1rem;
+    white-space: nowrap;
+}
+
+.score-panel .score {
+    display: block;
+    font-size: 2rem;
+    font-weight: 600;
 }
 
 .app-board-viewport {
+    margin-bottom: 2vmin;
     position: relative;
+    flex: auto;
 }
 
 /* nice trick https://codepen.io/ItScofield/pen/PNVZoQ */
@@ -83,11 +141,12 @@ h1 {
 .end-game-screen-figures {
     flex: 0.2;
     display: flex;
+    justify-content: center;
 }
 
 .end-game-screen-message {
     text-align: center;
-    color: rgb(66,66,66);
+    color: rgb(66, 66, 66);
     font-weight: 700;
     font-size: 2rem;
 }
@@ -175,8 +234,6 @@ h1 {
 
 .figure {
     display: inline-block;
-    height: 100%;
-    width: 100%;
 }
 
 .figure svg {
@@ -197,5 +254,5 @@ h1 {
 }
 
 .figure-appear {
-    animation: figure-appear .3s cubic-bezier(.5,1.8,.1,1.1);
+    animation: figure-appear .3s cubic-bezier(.5, 1.8, .1, 1.1);
 }
